src/test/ui/proc-macro/lifetimes.stderr
error: expected type, found `'`
  --> $DIR/lifetimes.rs:9:10
   |
LL | type A = single_quote_alone!();
   |          ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

